# process-gpt-agent-feedback

./: .dockerignore  .env.example  .gitignore  Dockerfile  FEEDBACK_PROCESSING_ARCHITECTURE.md  SETUP_GUIDE.md  docker-compose.yml  feedback_collected_count.sql  feedback_proposal_targets.sql  function.sql  main.py  pyproject.toml  readme.md  rename_feedback_proposals_table.sql  requirements.txt  skill_feedback_proposals.sql  test_batch_manual.py
core/: batch_analyzer.py  batch_api.py  batch_deduplicator.py  batch_rollback.py  batch_scheduler.py  batch_validator.py  bpmn_xml.py  conflict_analyzer.py  database.py  deep_agent.py  dmn_xml.py  feedback_batch_manager.py  feedback_processor.py  feedback_proposal_routes.py  knowledge_retriever.py  learning_committer.py  learning_router.py  llm.py  mcp_client.py  polling_manager.py  react_agent.py  react_tools.py  semantic_matcher.py  skill_api_client.py  skill_creator_committer.py  skill_quick_validate.py  skill_tools.py
docs/: SKILL_CREATOR_WORKFLOW.md
k8s/: configmap.yaml.example  deployment.yaml  service.yaml
scripts/: deploy.ps1  deploy.sh
tests/: hardcode_test.py  simple_test.py  test_batch_deduplication.py  test_bpmn_xml_merge.py  test_dmn_xml_roundtrip.py  test_feedback_author_ids.py  test_feedback_flow.py  test_learning_committers.py  test_mcp_integration.py  test_merge_request_attribution.py  test_merge_request_branch_name.py  test_process_definition_merge.py  test_skill_artifact_processing.py  test_skill_format.py  test_target_identity_filtering.py
tools/: knowledge_manager.py
utils/: logger.py  translator.py
(+10 files in other folders)
