[project]
name = "process-gpt-agent-feedback"
version = "2.0.0"
description = "피드백 기반 에이전트 스킬 개선 서비스 (Deep Agent)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.11",
    "fastapi>=0.109.0",
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-community>=0.3.31",
    "langchain-openai>=0.2.14",
    "langchain-anthropic>=1.4.7",
    "langgraph>=1.2.6",
    "langgraph-checkpoint>=4.1.1",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.6.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "python-dotenv>=1.1.0",
    "pytz>=2024.1",
    "requests>=2.31.0",
    "supabase>=2.0.0",
    "uvicorn>=0.27.0",
]
